Basic HTML Structure - github page and profile added

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <title>Hello World</title>
   </head>
   <body>
-    <h1>Hello World</h1>
+    <h1>Hello World!</h1>
+    <h2>About This Site:</h2>
+    <p>This is my first website hosted on GitHub Pages!</p>
+    <a href="https://github.com/gabriellaLord">Vist my GitHub profile</a>
+    <img src="profile_pic.png" alt="Profile Photo">
   </body>
 </html>
