--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
   <head>
     <title>Hello World</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>Hello World!</h1>
     <h2>About This Site:</h2>
-    <p>This is my first website hosted on GitHub Pages!</p>
-    <a href="https://github.com/gabriellaLord">Vist my GitHub profile</a>
+    <p>This is my first website hosted on GitHub Pages!
+    <a href="https://github.com/gabriellaLord">Vist my GitHub profile</a></p>
     <img src="profile_pic.png" alt="Profile Photo">
   </body>
 </html>
