--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <h1>Hello World!</h1>
     <h2>About This Site:</h2>
     <p>This is my first website hosted on GitHub Pages!
-    <a href="https://github.com/gabriellaLord">Vist my GitHub profile</a></p>
-    <img src="profile_pic.png" alt="Profile Photo">
+    <a href="https://github.com/gabriellaLord">Visit my GitHub profile</a></p>
+    <button onclick="sayHello()"><img src="profile_pic.png" alt="Profile Photo"></button>
+    <script src="script.js"></script>
   </body>
 </html>
