--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
   <head>
     <title>Hello World</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <h1>Hello World!</h1>
     <h2>About This Site:</h2>
     <p>This is my first website hosted on GitHub Pages!
     <a href="https://github.com/gabriellaLord">Visit my GitHub profile</a></p>
-    <button onclick="sayHello()"><img src="profile_pic.png" alt="Profile Photo"></button>
-    <script src="script.js"></script>
+    <button onclick="sayHello()"><img src="images/profile_pic.png" alt="Profile Photo"></button>
+    <script src="js/script.js"></script>
   </body>
 </html>
