--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Hello World</title>
     <link rel="stylesheet" href="css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <h1>Hello World!</h1>
