--- a/index.html
+++ b/index.html
@@ -6,11 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
-    <h1>Hello World!</h1>
-    <h2>About This Site:</h2>
-    <p>This is my first website hosted on GitHub Pages!
-    <a href="https://github.com/gabriellaLord">Visit my GitHub profile</a></p>
-    <button onclick="sayHello()"><img src="images/profile_pic.png" alt="Profile Photo"></button>
-    <script src="js/script.js"></script>
+    <header>
+      <h1>Hello World!</h1>
+    </header>
+    <main>
+      <h2>About This Site:</h2>
+      <p>This is my first website hosted on GitHub Pages!
+      <a href="https://github.com/gabriellaLord">Visit my GitHub profile</a></p>
+      <button onclick="sayHello()" aria-label="Say hello">
+        <img src="images/profile_pic.png" alt="GitHub Profile Photo">
+      </button>
+      <script src="js/script.js"></script>
+    </main>
   </body>
 </html>
