--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Hello World</title>
     <link rel="stylesheet" href="css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="images/favicon-32x32.png">
   </head>
   <body>
     <header>
