--- a/index.html
+++ b/index.html
@@ -1,23 +1,129 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>Hello World</title>
+    <title>Gabriella Lord | Portfolio</title>
     <link rel="stylesheet" href="css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="images/favicon-32x32.png">
+    <!-- Favicons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
   </head>
   <body>
-    <header>
-      <h1>Hello World!</h1>
+    <!-- Sticky Top Bar -->
+    <header class="topbar">
+      <div class="topbar-left">
+        <img src="images/profile.png" alt="Profile" class="topbar-profile">
+        <span class="topbar-name">Gabriella Lord</span>
+      </div>
+      <nav class="topbar-right">
+        <a href="#about">About</a>
+        <a href="#projects">Projects</a>
+        <a href="#skills">Skills</a>
+        <a href="#work">Work</a>
+        <a href="#education">Education</a>
+        <a href="#club">Club</a>
+        <a href="#contact">Contact</a>
+      </nav>
     </header>
+
     <main>
-      <h2>About This Site:</h2>
-      <p>This is my first website hosted on GitHub Pages!
-      <a href="https://github.com/gabriellaLord">Visit my GitHub profile</a></p>
-      <button onclick="sayHello()" aria-label="Say hello">
-        <img src="images/profile_pic.png" alt="GitHub Profile Photo">
-      </button>
-      <script src="js/script.js"></script>
+      <!-- About/Objective Section -->
+      <section id="about">
+        <h2>About Me</h2>
+        <p>
+          Hi! I'm Gabriella, a passionate developer interested in web, design, and tech.
+        </p>
+      </section>
+
+      <!-- Projects Section (customize with your real projects) -->
+      <section id="projects">
+        <h2>Projects</h2>
+        <div class="project">
+          <img src="images/project1.png" alt="Screenshot of Project 1">
+          <h3>Project One</h3>
+          <p>A short description of your project and what you learned.</p>
+          <a href="https://github.com/gabriellaLord/project1" target="_blank">GitHub</a>
+        </div>
+        <!-- Add more project cards as needed -->
+      </section>
+
+      <!-- Skills Section -->
+      <section id="skills">
+        <h2>Technical Skills</h2>
+        <ul>
+          <li><strong>Languages:</strong> Java, C, Python, Assembly, VHDL, R</li>
+          <li><strong>Tools:</strong> Git, GitHub, Vim, Wireshark</li>
+          <li><strong>Software:</strong> MATLAB, Zemax</li>
+          <li><strong>Concepts:</strong> Signal Processing, Fourier Transform, Frequency Analysis, Time Series Analysis</li>
+        </ul>
+      </section>
+
+      <!-- Work/Employment Section -->
+      <section id="work">
+        <h2>Employment</h2>
+        <div class="job">
+          <h3>Spectrum Labs Research Assistant</h3>
+          <p><strong>Montana State University</strong> <span>09/2024 – 02/2025, Bozeman, MT</span></p>
+          <ul>
+            <li>Explored structured light topics and optics concepts through informal study and exposure to lab work.</li>
+          </ul>
+        </div>
+        <div class="job">
+          <h3>SmartyCats Tutor</h3>
+          <p><strong>Montana State University</strong> <span>08/2023 – 09/2024, Bozeman, MT</span></p>
+          <ul>
+            <li>Tutored students in differential equations, calculus, and electrical circuits.</li>
+          </ul>
+        </div>
+        <div class="job">
+          <h3>Physics Peer Mentor</h3>
+          <p><strong>Montana State University</strong> <span>08/2019 – 09/2024, Bozeman, MT</span></p>
+          <ul>
+            <li>Collaborated with faculty to support curriculum goals.</li>
+          </ul>
+        </div>
+        <div class="job">
+          <h3>Intro to Circuits Teaching Assistant</h3>
+          <p><strong>Montana State University</strong> <span>08/2022 – 12/2022, Bozeman, MT</span></p>
+          <ul>
+            <li>Adapted instruction methods to meet student needs.</li>
+          </ul>
+        </div>
+        <div class="job">
+          <h3>Research Assistant</h3>
+          <p><strong>Montana State University</strong> <span>05/2019 – 08/2019, Bozeman, MT</span></p>
+          <ul>
+            <li>Investigated silica particle processing in ultra-high vacuum systems.</li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- Education Section -->
+      <section id="education">
+        <h2>Education</h2>
+        <p>
+          <strong>Montana State University</strong> &ndash; Bozeman, MT<br>
+          <strong>Bachelor of Science in Applied Mathematics</strong>, Minor in Computer Engineering<br>
+          <strong>Graduation:</strong> May 2025<br>
+          <strong>GPA:</strong> 3.61
+        </p>
+      </section>
+
+      <!-- Contact Section -->
+      <section id="contact">
+        <h2>Contact</h2>
+        <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
+        <p>
+          <a href="https://github.com/gabriellaLord" target="_blank">GitHub</a> |
+          <a href="https://linkedin.com/in/gabriella-lord" target="_blank">LinkedIn</a>
+        </p>
+      </section>
     </main>
+    <footer>
+      <p>&copy; 2025 Gabriella Lord</p>
+    </footer>
+    <script src="js/script.js"></script>
   </body>
 </html>
